@startuml

skinparam linetype ortho

entity Meta_DataElements {
    element_id UUID <<PK>>
    table_name VARCHAR(100)
    column_name VARCHAR(100)
    data_type VARCHAR(50)
    is_nullable BOOLEAN
    default_value VARCHAR(100)
    description TEXT
    load_date TIMESTAMP
}

entity Meta_Tables {
    table_id UUID <<PK>>
    table_name VARCHAR(100)
    description TEXT
    load_date TIMESTAMP
}

entity Meta_Relationships {
    relationship_id UUID <<PK>>
    table_name VARCHAR(100)
    column_name VARCHAR(100)
    related_table_name VARCHAR(100)
    related_column_name VARCHAR(100)
    relationship_type VARCHAR(50)
    load_date TIMESTAMP
}

entity Meta_Sources {
    source_id UUID <<PK>>
    source_name VARCHAR(100)
    description TEXT
    load_date TIMESTAMP
}

entity Meta_ETL_Processes {
    etl_id UUID <<PK>>
    process_name VARCHAR(100)
    source_table VARCHAR(100)
    target_table VARCHAR(100)
    description TEXT
    load_date TIMESTAMP
}

entity Meta_Business_Rules {
    rule_id UUID <<PK>>
    rule_name VARCHAR(100)
    description TEXT
    table_name VARCHAR(100)
    column_name VARCHAR(100)
    rule_expression TEXT
    load_date TIMESTAMP
}

entity Meta_Audit {
    audit_id UUID <<PK>>
    table_name VARCHAR(100)
    column_name VARCHAR(100)
    old_value VARCHAR(255)
    new_value VARCHAR(255)
    change_date TIMESTAMP
    changed_by VARCHAR(100)
}

entity Meta_Users {
    user_id UUID <<PK>>
    user_name VARCHAR(100)
    role VARCHAR(100)
    email VARCHAR(100)
    load_date TIMESTAMP
}

Meta_DataElements }|..|| Meta_Tables : table_name
Meta_Relationships }|..|| Meta_Tables : table_name
Meta_Relationships }|..|| Meta_Tables : related_table_name
Meta_ETL_Processes }|..|| Meta_Tables : source_table
Meta_ETL_Processes }|..|| Meta_Tables : target_table
Meta_Business_Rules }|..|| Meta_Tables : table_name
Meta_Business_Rules }|..|| Meta_DataElements : column_name
Meta_Audit }|..|| Meta_Tables : table_name
Meta_Audit }|..|| Meta_DataElements : column_name
@enduml
